<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nav.com.nfproject1.PhoneNumberVerificationActivity">

    <TextView
        android:id="@+id/verification_demo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_demo_text"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:id="@+id/verification_send_code_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/verification_demo_textView"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/verification_pre_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/just_enter_an_indian_number_for_now"
            android:gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/verification_phone_number_editText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/_9876543210"
            android:gravity="center"
            android:inputType="phone"
            android:maxLength="10"
            />


        <Button
            android:id="@+id/verification_send_message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_verification_code"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/verification_verify_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/verification_send_code_linearLayout"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        >
        <EditText
            android:id="@+id/verification_verify_editText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_verification_code_here"
            android:gravity="center"
            android:inputType="phone"
            android:maxLength="10"
            />
        <Button
            android:id="@+id/verification_verify_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"

            />
    </LinearLayout>

<Button
    android:id="@+id/moveToPayment_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Move to payment"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"/>
</RelativeLayout>
